--- a/client/app.sass
+++ b/client/app.sass
@@ -1,15 +1,10 @@
 *
   box-sizing: border-box
 
-main.main
-  padding: 16px 8px
-  flex: 1
-  overflow: hidden
-
 body
   display: flex
   flex-direction: column
   height: 100vh
 
-.logs
-  max-width: 400px
+.no-wrap
+  white-space: nowrap
