--- a/client/styles/app.sass
+++ b/client/styles/app.sass
@@ -10,6 +10,10 @@ body
   display: flex
   flex-direction: column
   overflow: hidden
+  flex: 1
+
+input[type=checkbox]:disabled
+  cursor: not-allowed
 
 .no-wrap
   white-space: nowrap
